--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -95,3 +95,45 @@ body {
     margin: 0;
 }
 
+/* contect Section In hero Section */
+
+.hero-section--content {
+    padding-top: 8rem;
+    width: 50%;
+    height: 100%;
+    margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+.hero-section--content__contact-btn {
+    display: inline-block;
+    text-decoration: none;
+    width: 150px;
+    height: 40px;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 5px;
+    background-color: rgb(0, 149, 248);
+    color: #ffffff;
+    margin-top: 3rem;
+    padding-top: 10px;
+}
+
+.hero-section--content__contact-header {
+    width: 90%;
+}
+
+.hero-section--content__contact-dec {
+    width: 90%;
+    line-height: 1.5;
+}
+
+@media (max-width: 1200) {
+
+}
+
+@media (max-width: 900px) {
+
+}
