--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -138,6 +138,78 @@ body {
     line-height: 1.5;
 }
 
+
+/* Style Side Menu */
+
+.menu-btn {
+    display: none;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #353535;
+    position: absolute;
+    right: -50px;
+    top: 0;
+    transition: all 0.25s;
+    z-index: 100;
+}
+
+.collapse-navbar {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.collapse-navbar--container {
+    position: absolute;
+    /* display: flex;
+    justify-content: center;
+    align-items: flex-start; */
+    width: 100%;
+    right: -100%;
+    height: 400px;
+    background-color: #f5f5f5;
+    border-bottom: 2px solid #353535;
+    transition: all 0.15s;
+}
+
+.collapse-navbar--container ul {
+    padding-top: 2rem;
+    padding-left: 0px;
+}
+
+.collapse-navbar--container ul .item-link {
+    padding-top: 1rem;
+    list-style: none;
+    text-align: left;
+    padding-left: 10px;
+    color: #353535;
+    border-bottom: 2px solid #353535;
+}
+
+.collapse-navbar--container ul .item-link:hover {
+    border-bottom-color: rgb(0, 149, 248);
+    color: rgb(0, 149, 248);
+    transition: all 0.25s;
+}
+
+.collapse-navbar--container ul .item-link a {
+    text-decoration: none;
+    display: inline-block;
+    color: inherit;
+    font-weight: bold;
+    font-size: 16px;
+    transition: all 0.3s;
+}
+
+.collapse-navbar--container ul .item-link a:hover {
+    padding-left: 12px;
+    transition: all 0.2s;
+}
+
 @media (max-width: 1200px) {
     .container .hero-section--header {
         padding-right: 3rem;
@@ -198,5 +270,39 @@ body {
         font-size: 16px;
         line-height: 1.2;
         width: 100%;
+    }
+    .menu-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        outline: none;
+        right: 0;
+        transition: all 0.25s
+    }
+    .menu-btn .fa-bars {
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .menu-btn .fa-bars {
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .collapse-navbar--container {
+        width: 100%;
+    }
+    .open {
+        right: 0%;
+        transition: all 0.25s;
+    }
+    .collapse-navbar--containe ul {
+        padding-top: 2rem;
+        margin-left: -2rem;
+    }
+    .collapse-navbar--container .logo-section {
+        padding-top: 1rem;
+        padding-left: 1rem;
+    }
+    .collapse-navbar--container .logo-section .logo-section__logo-text {
+        font-size: 26px;
     }
 }
