Delete the our service  background temporarily

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -128,7 +128,7 @@ body{
 }
 
 
-.our-services__bg {
+/* .our-services__bg {
   position: absolute;
   z-index: -1;
   height: 100%;
@@ -193,5 +193,5 @@ body{
   width: 6.54rem;
   left: 61rem;
   top: 35rem;
-}
+} */
     
