--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+a {
+    text-decoration: none;
+    color: #555555;
+}
 body {
     margin: 0;
     padding: 0;
@@ -42,18 +46,15 @@ body {
     justify-content: center;
     align-items: center;
     list-style: none;
-    color: #555555;
 }
 
 .container .hero-section--header .navbar ul .item-link {
     padding: 5px 10px;
-    color: inherit;
 }
 
 .container .hero-section--header .navbar ul .item-link a {
     text-decoration: none;
     display: inline-block;
-    color: inherit;
     font-weight: bold;
     font-size: 18px;
     border-bottom: 3px solid transparent;
@@ -165,10 +166,11 @@ body {
 
 .collapse-navbar--container {
     position: absolute;
+    display: none;
     /* display: flex;
     justify-content: center;
     align-items: flex-start; */
-    width: 100%;
+    /* width: 100%; */
     right: -100%;
     height: 400px;
     background-color: #f5f5f5;
@@ -289,6 +291,10 @@ body {
     }
     .collapse-navbar--container {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        background-color: #f5f5f5;
+        transition: all 0.2s;
     }
     .open {
         right: 0%;
