--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -14,15 +14,16 @@ body {
 .hero-section {
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 .container {
-    width: 100%;
-    min-width: 100%;
+    width: 1140px;
+    /* min-width: 100%; */
+    min-height: 100%;
     margin: 0 auto;
     padding-top: 1rem;
-    padding-bottom: 10rem;
+    padding-bottom: 7rem;
     position: relative;
 }
 
@@ -53,18 +54,17 @@ body {
 }
 
 .container .hero-section--header .navbar ul .item-link a {
-    text-decoration: none;
     display: inline-block;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 18px;
-    border-bottom: 3px solid transparent;
-    transition: all 0.3s;
+    border-bottom: 1px solid transparent;
+    transition: all 0.2s;
 }
 
 .container .hero-section--header .navbar ul .item-link a:hover {
     border-bottom-color: #555555;
+    color: #252525;
     transform-origin: center;
-    transform: scale(1.05);
     transition: all 0.2s;
 }
 
@@ -86,21 +86,22 @@ body {
 
 .header-img .logo-section {
     margin-left: 3rem;
-    padding-top: 2rem;
+    padding-top: 3rem;
 }
 
-.logo-section .logo-section__logo-text {
+/* .logo-section .logo-section__logo-text {
     font-size: 36px;
     color: #272727;
     letter-spacing: -4px;
     perspective: 100px;
     margin: 0;
-}
+} */
 
 /* contect Section In hero Section */
 
 .hero-section--content {
     padding-top: 8rem;
+    padding-left: 3rem;
     width: 50%;
     height: 100%;
     margin-left: auto;
@@ -131,11 +132,11 @@ body {
 }
 
 .hero-section--content__contact-header {
-    width: 90%;
+    width: 80%;
 }
 
 .hero-section--content__contact-dec {
-    width: 90%;
+    width: 80%;
     line-height: 1.5;
 }
 
@@ -144,9 +145,9 @@ body {
 
 .menu-btn {
     display: none;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #353535;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #353535;
     position: absolute;
     right: -50px;
     top: 0;
@@ -156,7 +157,7 @@ body {
 
 .collapse-navbar {
     position: absolute;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     top: 0px;
     display: flex;
@@ -212,6 +213,10 @@ body {
     transition: all 0.2s;
 }
 
+.collapse-navbar .logo-section {
+    display: none;
+}
+
 @media (max-width: 1200px) {
     .container .hero-section--header {
         padding-right: 3rem;
@@ -244,10 +249,13 @@ body {
 
 @media (max-width: 600px) {
     .hero-section {
-        min-height: 400px;
+        min-height: auto;
     }
     .container {
-        padding-bottom: 2rem;
+        padding-bottom: 3rem;
+        padding-top: 3rem;
+        background-image: linear-gradient(180deg, #1414142d, #f5f5f5ab);
+        font-size: 1.1rem;
     }
     .container .hero-section--header {
         display: none;
@@ -261,15 +269,16 @@ body {
     .hero-section--content {
         margin: 0 auto;
         padding-top: 2rem;
+        padding-left: 0%;
         width: 80%;
         transition: all 0.35s;
     }
     .hero-section--content__contact-header {
-        font-size: 20px;
+        font-size: 18px;
         width: 100%;
     }
     .hero-section--content__contact-dec {
-        font-size: 16px;
+        font-size: 14px;
         line-height: 1.2;
         width: 100%;
     }
@@ -281,13 +290,31 @@ body {
         right: 0;
         transition: all 0.25s
     }
+    .menu-btn:hover {
+        background-color: #555555;
+        cursor: pointer;
+        color: #f5f5f5;
+        border-color: #555555;
+        transition: all 0.25s
+    }
     .menu-btn .fa-bars {
         font-size: 30px;
         font-weight: bold;
     }
     .menu-btn .fa-bars {
-        font-size: 30px;
+        font-size: 22px;
         font-weight: bold;
+    }
+    .collapse-navbar {
+        width: 100%;
+    }
+    .collapse-navbar--container ul .item-link {
+        border-bottom: 1px solid #353535;
+    }
+    .collapse-navbar .logo-section {
+        padding-top: 1rem;
+        padding-left: 2.2rem;
+        width: 100%;
     }
     .collapse-navbar--container {
         width: 100%;
@@ -300,15 +327,12 @@ body {
         right: 0%;
         transition: all 0.25s;
     }
-    .collapse-navbar--containe ul {
+    .collapse-navbar--container ul {
         padding-top: 2rem;
-        margin-left: -2rem;
+        margin-top: 0px;
     }
-    .collapse-navbar--container .logo-section {
+    .collapse-navbar .collapse-navbar--container .logo-section {
         padding-top: 1rem;
         padding-left: 1rem;
-    }
-    .collapse-navbar--container .logo-section .logo-section__logo-text {
-        font-size: 26px;
     }
 }
