--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,17 +1,16 @@
-*{
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 15px;
   font-family: Poppins;
-  box-sizing: border-box;
-  height: 1060rem;
 }
 
-body{
-  background: linear-gradient(180deg, #F8F8F8 68.23%, #E9DEFF 100%);
+body {
+  background: linear-gradient(180deg, #f8f8f8 68.23%, #e9deff 100%);
 }
 
 .our-services__container {
@@ -23,7 +22,7 @@ body{
   align-items: center;
 }
 
-.our-services__Services-container{
+.our-services__Services-container {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
@@ -31,167 +30,124 @@ body{
   width: 93rem;
 }
 
-.our-services__title{
-  width: 319px;
-  margin: 50px auto 0 ;
+.our-services__title {
+  margin: 50px auto 0;
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
   font-size: 3.33rem;
-  color: #3A3A3A;
+  color: #3a3a3a;
 }
 
-.service__shap1{
+.service__shap1 {
   box-shadow: 0rem 0.26rem 1.46rem 0.33rem rgba(0, 0, 0, 0.15);
   border-radius: 0rem 3.3rem;
 }
 
-.service__shap2{
+.service__shap2 {
   box-shadow: 0rem 0.26rem 1.46rem 0.33rem rgba(0, 0, 0, 0.15);
   border-radius: 3.3rem 0rem;
 }
-.services-topBar{
+.services-topBar {
   position: absolute;
   width: 22.33rem;
   height: 1.1rem;
 }
 
-.service__shap1 > .services-topBar{
+.service__shap1 > .services-topBar {
   left: 0;
   border-radius: 0px 0px 50px 0px;
 }
 
-.service__shap2 > .services-topBar{
+.service__shap2 > .services-topBar {
   right: 0;
   border-radius: 0px 0px 0px 50px;
 }
 
-.service{  
+.service {
   position: relative;
   width: 39.6rem;
   height: 21.9rem;
-  background: #FFFFFF;
+  background: #ffffff;
   margin: 51px 51px 30px;
   text-align: center;
 }
 
-.service > h1{
+.service > h1 {
   font-weight: 600;
   font-size: 2.133rem;
   font-style: "semiBold";
 }
 
-.service > p{
+.service > p {
   padding: 10px 60px;
-/* width: 467px; */
+  /* width: 467px; */
 
   font-style: normal;
   font-weight: bold;
   font-size: 1.2rem;
   line-height: 27px;
 
-  color: #706E6E;
+  color: #706e6e;
 }
 
-.service > img{
+.service > img {
   width: 5.86rem;
   margin: 5rem 3.4px 0;
 }
 
 .service:first-child > h1 {
-  color: #004F9E;
+  color: #004f9e;
 }
 .service:nth-of-type(2) > h1 {
   color: #920069;
 }
 .service:nth-of-type(3) > h1 {
-  color: #2C878D;
+  color: #2c878d;
 }
 .service:nth-of-type(4) > h1 {
-  color: #AF9E00;
+  color: #af9e00;
 }
 
 .service:first-child > .services-topBar {
-  background: #0884FF;
+  background: #0884ff;
+  box-shadow: inset 1px -2px 8px 0 #5555553a;
 }
 
 .service:nth-of-type(2) > .services-topBar {
-  background: #FF00B8;
+  background: #ff00b8;
+  box-shadow: inset 1px -2px 8px 0 #5555553a;
 }
 
 .service:nth-of-type(3) > .services-topBar {
-  background: #3BC4CD;
+  background: #3bc4cd;
+  box-shadow: inset 1px -2px 8px 0 #5555553a;
 }
 
 .service:nth-of-type(4) > .services-topBar {
-  background: #FFE600;
+  background: #ffe600;
+  box-shadow: inset 1px -2px 8px 0 #5555553a;
 }
 
+/* Desktops and laptops ----------- */
+@media (max-width: 1200px) {
+  html{
+    font-size: 10px;
+  }
 
-/* .our-services__bg {
-  position: absolute;
-  z-index: -1;
-  height: 100%;
+  .our-services__Services-container {
+    width: auto;
+  }
 }
 
-.our-services__bg > div {
-  position: absolute;
-  border-radius: 50%;
+/* portrait ----------- */
+@media (max-width: 1000px) {
 }
 
-.our-services__bg > div:first-child  {
-  background: rgba(221, 205, 255, 0.2);
-  height: 6.54rem; 
-  width: 6.54rem;
-  left: 55rem;
-  top: 4rem;
+/* landscape ----------- */
+@media (max-width: 900px) {
 }
 
-.our-services__bg > div:nth-of-type(2) {
-  background: rgba(221, 205, 255, 0.2);
-  height: 6.54rem; 
-  width: 6.54rem;
-  left: 26rem;
-  top: 22rem;
+/* Smartphones ----------- */
+@media (max-width: 600px) {
 }
-
-.our-services__bg > div:nth-of-type(3) {
-  background: rgba(221, 205, 255, 0.2);
-  height: 4.07rem; 
-  width: 4.07rem;
-  left: 89rem;
-  top: 23rem;
-}
-
-.our-services__bg > div:nth-of-type(4) {
-  background: rgba(221, 205, 255, 0.2);
-  height: 3.264rem; 
-  width: 3.264rem;
-  left: 97rem;
-  top: 25rem;
-}
-
-.our-services__bg > div:nth-of-type(5) {
-  background: rgba(133, 81, 243, 0.2);
-  height: 6.54rem;
-  width: 6.54rem;
-  left: 85rem;
-  top: 28rem;
-}
-
-.our-services__bg > div:nth-of-type(6) {
-  background: rgba(221, 205, 255, 0.2);
-  height: 24.73rem; 
-  width: 24.73rem; 
-  left: 13rem;
-  top: 35rem;
-}
-
-.our-services__bg > div:nth-of-type(7) {
-  background: rgba(248, 165, 229, 0.2);
-  height: 6.54rem; 
-  width: 6.54rem;
-  left: 61rem;
-  top: 35rem;
-} */
-    
