--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,9 +1,7 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-}
-a {
-  text-decoration: none;
-  color: #555555;
 }
 
 html {
@@ -12,24 +10,21 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Poppins;
+  background: linear-gradient(180deg, #f8f8f8 68.23%, #e9deff 100%);
 }
 
 .hero-section {
   position: relative;
   width: 100%;
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 
 .container {
-  /* width: 1140px; */
+  width: 100%;
   min-width: 100%;
-  min-height: 100%;
   margin: 0 auto;
   padding-top: 1rem;
-  padding-bottom: 7rem;
+  padding-bottom: 10rem;
   position: relative;
 }
 
@@ -53,24 +48,28 @@ body {
   justify-content: center;
   align-items: center;
   list-style: none;
+  color: #555555;
 }
 
 .container .hero-section--header .navbar ul .item-link {
   padding: 5px 10px;
+  color: inherit;
 }
 
 .container .hero-section--header .navbar ul .item-link a {
+  text-decoration: none;
   display: inline-block;
-  font-weight: normal;
+  color: inherit;
+  font-weight: bold;
   font-size: 18px;
-  border-bottom: 1px solid transparent;
-  transition: all 0.2s;
+  border-bottom: 3px solid transparent;
+  transition: all 0.3s;
 }
 
 .container .hero-section--header .navbar ul .item-link a:hover {
   border-bottom-color: #555555;
-  color: #252525;
   transform-origin: center;
+  transform: scale(1.05);
   transition: all 0.2s;
 }
 
@@ -92,22 +91,21 @@ body {
 
 .header-img .logo-section {
   margin-left: 3rem;
-  padding-top: 3rem;
+  padding-top: 2rem;
 }
 
-/* .logo-section .logo-section__logo-text {
-    font-size: 36px;
-    color: #272727;
-    letter-spacing: -4px;
-    perspective: 100px;
-    margin: 0;
-} */
+.logo-section .logo-section__logo-text {
+  font-size: 36px;
+  color: #272727;
+  letter-spacing: -4px;
+  perspective: 100px;
+  margin: 0;
+}
 
 /* contect Section In hero Section */
 
 .hero-section--content {
   padding-top: 8rem;
-  padding-left: 3rem;
   width: 50%;
   height: 100%;
   margin-left: auto;
@@ -138,11 +136,11 @@ body {
 }
 
 .hero-section--content__contact-header {
-  width: 80%;
+  width: 90%;
 }
 
 .hero-section--content__contact-dec {
-  width: 80%;
+  width: 90%;
   line-height: 1.5;
 }
 
@@ -150,9 +148,9 @@ body {
 
 .menu-btn {
   display: none;
-  width: 30px;
-  height: 30px;
-  border: 1px solid #353535;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #353535;
   position: absolute;
   right: -50px;
   top: 0;
@@ -162,7 +160,7 @@ body {
 
 .collapse-navbar {
   position: absolute;
-  /* width: 100%; */
+  width: 100%;
   height: 100%;
   top: 0px;
   display: flex;
@@ -171,12 +169,12 @@ body {
 }
 
 .collapse-navbar--container {
-  position: absolute;
   display: none;
+  position: absolute;
   /* display: flex;
     justify-content: center;
     align-items: flex-start; */
-  /* width: 100%; */
+  width: 100%;
   right: -100%;
   height: 400px;
   background-color: #f5f5f5;
@@ -218,8 +216,70 @@ body {
   transition: all 0.2s;
 }
 
-.collapse-navbar .logo-section {
-  display: none;
+.our-services__container {
+  position: relative;
+  display: flex;
+  height: 60rem;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.our-services__Services-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  width: 93rem;
+}
+
+.our-services__title {
+  margin: 50px auto 0;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3.33rem;
+  color: #3a3a3a;
+}
+
+.service__shap1 {
+  box-shadow: 0rem 0.26rem 1.46rem 0.33rem rgba(0, 0, 0, 0.15);
+  border-radius: 0rem 3.3rem;
+}
+
+.service__shap2 {
+  box-shadow: 0rem 0.26rem 1.46rem 0.33rem rgba(0, 0, 0, 0.15);
+  border-radius: 3.3rem 0rem;
+}
+.services-topBar {
+  position: absolute;
+  width: 22.33rem;
+  height: 1.1rem;
+}
+
+.service__shap1 > .services-topBar {
+  left: 0;
+  border-radius: 0px 0px 50px 0px;
+}
+
+.service__shap2 > .services-topBar {
+  right: 0;
+  border-radius: 0px 0px 0px 50px;
+}
+
+.service {
+  position: relative;
+  width: 39.6rem;
+  height: 21.9rem;
+  background: #ffffff;
+  margin: 51px 51px 30px;
+  text-align: center;
+}
+
+.service > h1 {
+  font-weight: 600;
+  font-size: 2.133rem;
+  font-style: "semiBold";
 }
 
 .service > p {
@@ -271,19 +331,53 @@ body {
 
 /* Desktops and laptops ----------- */
 @media (max-width: 1200px) {
-  .container .hero-section--header {
-    padding-right: 3rem;
+  html{
+    font-size: 10px;
+  }
+
+  .our-services__Services-container {
+    width: auto;
   }
 }
 
 /* portrait ----------- */
 @media (max-width: 1000px) {
+}
+
+.our-services__bg > div:nth-of-type(6) {
+  background: rgba(221, 205, 255, 0.2);
+  height: 24.73rem;
+  width: 24.73rem;
+  left: 13rem;
+  top: 35rem;
+}
+
+.our-services__bg > div:nth-of-type(7) {
+  background: rgba(248, 165, 229, 0.2);
+  height: 6.54rem;
+  width: 6.54rem;
+  left: 61rem;
+  top: 35rem;
+}
+
+
+
+@media (max-width: 1200px) {
+  /* header */
+  .container .hero-section--header {
+    padding-right: 3rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  /* header */
   .container .hero-section--header {
     padding-right: 1rem;
   }
 }
 
 @media (max-width: 900px) {
+  /* header */
   .container .hero-section--header {
     display: flex;
     flex-direction: column;
@@ -302,14 +396,12 @@ body {
 }
 
 @media (max-width: 600px) {
+  /* header */
   .hero-section {
-    min-height: auto;
+    min-height: 400px;
   }
   .container {
-    padding-bottom: 3rem;
-    padding-top: 3rem;
-    background-image: linear-gradient(180deg, #1414142d, #f5f5f5ab);
-    font-size: 1.1rem;
+    padding-bottom: 2rem;
   }
   .container .hero-section--header {
     display: none;
@@ -323,16 +415,15 @@ body {
   .hero-section--content {
     margin: 0 auto;
     padding-top: 2rem;
-    padding-left: 0%;
     width: 80%;
     transition: all 0.35s;
   }
   .hero-section--content__contact-header {
-    font-size: 18px;
+    font-size: 20px;
     width: 100%;
   }
   .hero-section--content__contact-dec {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.2;
     width: 100%;
   }
@@ -344,49 +435,31 @@ body {
     right: 0;
     transition: all 0.25s;
   }
-  .menu-btn:hover {
-    background-color: #555555;
-    cursor: pointer;
-    color: #f5f5f5;
-    border-color: #555555;
-    transition: all 0.25s;
-  }
   .menu-btn .fa-bars {
     font-size: 30px;
     font-weight: bold;
   }
   .menu-btn .fa-bars {
-    font-size: 22px;
+    font-size: 30px;
     font-weight: bold;
   }
-  .collapse-navbar {
-    width: 100%;
-  }
-  .collapse-navbar--container ul .item-link {
-    border-bottom: 1px solid #353535;
-  }
-  .collapse-navbar .logo-section {
-    padding-top: 1rem;
-    padding-left: 2.2rem;
-    width: 100%;
-  }
   .collapse-navbar--container {
+    display: block;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #f5f5f5;
-    transition: all 0.2s;
   }
   .open {
     right: 0%;
     transition: all 0.25s;
   }
-  .collapse-navbar--container ul {
+  .collapse-navbar--containe ul {
     padding-top: 2rem;
-    margin-top: 0px;
+    margin-left: -2rem;
   }
-  .collapse-navbar .collapse-navbar--container .logo-section {
+  .collapse-navbar--container .logo-section {
     padding-top: 1rem;
     padding-left: 1rem;
+  }
+  .collapse-navbar--container .logo-section .logo-section__logo-text {
+    font-size: 26px;
   }
 }
