--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -10,21 +10,30 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
+  font-family: Poppins;
   background: linear-gradient(180deg, #f8f8f8 68.23%, #e9deff 100%);
+}
+
+a {
+  text-decoration: none;
+  color: #555555;
 }
 
 .hero-section {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .container {
-  width: 100%;
+  /* width: 1140px; */
   min-width: 100%;
+  min-height: 100%;
   margin: 0 auto;
   padding-top: 1rem;
-  padding-bottom: 10rem;
+  padding-bottom: 7rem;
   position: relative;
 }
 
@@ -48,28 +57,24 @@ body {
   justify-content: center;
   align-items: center;
   list-style: none;
-  color: #555555;
 }
 
 .container .hero-section--header .navbar ul .item-link {
   padding: 5px 10px;
-  color: inherit;
 }
 
 .container .hero-section--header .navbar ul .item-link a {
-  text-decoration: none;
   display: inline-block;
-  color: inherit;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 18px;
-  border-bottom: 3px solid transparent;
-  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  transition: all 0.2s;
 }
 
 .container .hero-section--header .navbar ul .item-link a:hover {
   border-bottom-color: #555555;
+  color: #252525;
   transform-origin: center;
-  transform: scale(1.05);
   transition: all 0.2s;
 }
 
@@ -91,21 +96,22 @@ body {
 
 .header-img .logo-section {
   margin-left: 3rem;
-  padding-top: 2rem;
+  padding-top: 3rem;
 }
 
-.logo-section .logo-section__logo-text {
-  font-size: 36px;
-  color: #272727;
-  letter-spacing: -4px;
-  perspective: 100px;
-  margin: 0;
-}
+/* .logo-section .logo-section__logo-text {
+    font-size: 36px;
+    color: #272727;
+    letter-spacing: -4px;
+    perspective: 100px;
+    margin: 0;
+} */
 
 /* contect Section In hero Section */
 
 .hero-section--content {
   padding-top: 8rem;
+  padding-left: 3rem;
   width: 50%;
   height: 100%;
   margin-left: auto;
@@ -136,11 +142,11 @@ body {
 }
 
 .hero-section--content__contact-header {
-  width: 90%;
+  width: 80%;
 }
 
 .hero-section--content__contact-dec {
-  width: 90%;
+  width: 80%;
   line-height: 1.5;
 }
 
@@ -148,9 +154,9 @@ body {
 
 .menu-btn {
   display: none;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #353535;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #353535;
   position: absolute;
   right: -50px;
   top: 0;
@@ -160,7 +166,7 @@ body {
 
 .collapse-navbar {
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   top: 0px;
   display: flex;
@@ -169,12 +175,12 @@ body {
 }
 
 .collapse-navbar--container {
-  display: none;
   position: absolute;
+  display: none;
   /* display: flex;
     justify-content: center;
     align-items: flex-start; */
-  width: 100%;
+  /* width: 100%; */
   right: -100%;
   height: 400px;
   background-color: #f5f5f5;
@@ -214,6 +220,10 @@ body {
 .collapse-navbar--container ul .item-link a:hover {
   padding-left: 12px;
   transition: all 0.2s;
+}
+
+.collapse-navbar .logo-section {
+  display: none;
 }
 
 .our-services__container {
