--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -286,6 +286,7 @@ body {
     justify-content: center;
     align-items: center;
     outline: none;
+    background-color: #f5f5f5;
     right: 0;
     transition: all 0.25s;
   }
@@ -297,12 +298,9 @@ body {
     transition: all 0.25s;
   }
   .menu-btn .fa-bars {
-    font-size: 30px;
-    font-weight: bold;
-  }
-  .menu-btn .fa-bars {
     font-size: 22px;
     font-weight: bold;
+    color: #555555;
   }
   .collapse-navbar {
     width: 100%;
@@ -330,7 +328,12 @@ body {
     padding-top: 2rem;
     margin-top: 0px;
   }
+  .collapse-navbar .logo-section {
+    display: block;
+  }
   .collapse-navbar .collapse-navbar--container .logo-section {
+    display: block;
+    width: 80%;
     padding-top: 1rem;
     padding-left: 1rem;
   }
