--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,23 +2,21 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-html {
-  font-size: 15px;
   font-family: Poppins;
+  font-size: 15px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Poppins;
   background: linear-gradient(180deg, #f8f8f8 68.23%, #e9deff 100%);
 }
 
 a {
   text-decoration: none;
   color: #555555;
+}
+
+section{
+  margin-bottom: 3%;
 }
 
 .hero-section {
@@ -30,8 +28,8 @@ a {
 .container {
   /* width: 1140px; */
   min-width: 100%;
-  min-height: 100%;
-  margin: 0 auto;
+  min-height: 100%; 
+  margin: 0 auto 43px;
   padding-top: 1rem;
   padding-bottom: 7rem;
   position: relative;
@@ -339,21 +337,6 @@ a {
   box-shadow: inset 1px -2px 8px 0 #5555553a;
 }
 
-/* Desktops and laptops ----------- */
-@media (max-width: 1200px) {
-  html{
-    font-size: 10px;
-  }
-
-  .our-services__Services-container {
-    width: auto;
-  }
-}
-
-/* portrait ----------- */
-@media (max-width: 1000px) {
-}
-
 .our-services__bg > div:nth-of-type(6) {
   background: rgba(221, 205, 255, 0.2);
   height: 24.73rem;
@@ -375,6 +358,7 @@ a {
   .container .hero-section--header {
     padding-right: 3rem;
   }
+
 }
 
 @media (max-width: 1000px) {
@@ -452,7 +436,7 @@ a {
     font-weight: bold;
   }
   .collapse-navbar--container {
-    display: block;
+    /* display: block; */
     width: 100%;
   }
   .open {
