--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -227,7 +227,7 @@ section{
 .our-services__container {
   position: relative;
   display: flex;
-  height: 60rem;
+  /* height: 60em; */
   flex-flow: column;
   justify-content: center;
   align-items: center;
@@ -238,7 +238,6 @@ section{
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  width: 93rem;
 }
 
 .our-services__title {
@@ -246,23 +245,23 @@ section{
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 3.33rem;
+  font-size: 3.33em;
   color: #3a3a3a;
 }
 
 .service__shap1 {
-  box-shadow: 0rem 0.26rem 1.46rem 0.33rem rgba(0, 0, 0, 0.15);
-  border-radius: 0rem 3.3rem;
+  box-shadow: 0em 0.26em 1.46em 0.33em rgba(0, 0, 0, 0.15);
+  border-radius: 0em 3.3em;
 }
 
 .service__shap2 {
-  box-shadow: 0rem 0.26rem 1.46rem 0.33rem rgba(0, 0, 0, 0.15);
-  border-radius: 3.3rem 0rem;
+  box-shadow: 0em 0.26em 1.46em 0.33em rgba(0, 0, 0, 0.15);
+  border-radius: 3.3em 0em;
 }
 .services-topBar {
   position: absolute;
-  width: 22.33rem;
-  height: 1.1rem;
+  width: 22.33em;
+  height: 1.1em;
 }
 
 .service__shap1 > .services-topBar {
@@ -277,8 +276,8 @@ section{
 
 .service {
   position: relative;
-  width: 39.6rem;
-  height: 21.9rem;
+  width: 39.6em;
+  height: 21.9em;
   background: #ffffff;
   margin: 51px 51px 30px;
   text-align: center;
@@ -286,7 +285,7 @@ section{
 
 .service > h1 {
   font-weight: 600;
-  font-size: 2.133rem;
+  font-size: 2.133em;
   font-style: "semiBold";
 }
 
@@ -294,14 +293,14 @@ section{
   padding: 10px 60px;
   font-style: normal;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.2em;
   line-height: 27px;
   color: #706e6e;
 }
 
 .service > img {
-  width: 5.86rem;
-  margin: 5rem 3.4px 0;
+  width: 5.86em;
+  margin: 5em 3.4px 0;
 }
 
 .service:first-child > h1 {
@@ -339,19 +338,25 @@ section{
 
 .our-services__bg > div:nth-of-type(6) {
   background: rgba(221, 205, 255, 0.2);
-  height: 24.73rem;
-  width: 24.73rem;
-  left: 13rem;
-  top: 35rem;
+  height: 24.73em;
+  width: 24.73em;
+  left: 13em;
+  top: 35em;
 }
 
 .our-services__bg > div:nth-of-type(7) {
   background: rgba(248, 165, 229, 0.2);
-  height: 6.54rem;
-  width: 6.54rem;
-  left: 61rem;
-  top: 35rem;
+  height: 6.54em;
+  width: 6.54em;
+  left: 61em;
+  top: 35em;
 }
+
+@media (min-width: 1200px) {
+  *{
+    font-size: 16px;
+  }
+
 
 @media (max-width: 1200px) {
   /* header */
@@ -359,6 +364,11 @@ section{
     padding-right: 3rem;
   }
 
+  /* */
+  /* .our-services__Services-container {
+    flex-flow: column wrap;
+    width: 0; */
+}
 }
 
 @media (max-width: 1000px) {
@@ -454,4 +464,92 @@ section{
   .collapse-navbar--container .logo-section .logo-section__logo-text {
     font-size: 26px;
   }
+}
+
+
+/* mohamad */
+
+.about-us-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+.bout-us-section__container {
+  position: relative;
+  /* background-color: aquamarine; */
+  width: 80%;
+  height: 40vh;
+  padding: 40px 40px 20px 40px;
+  box-shadow: 0px 4px 22px 5px #000000;
+}
+.container-details {
+  width: 100%;
+}
+.container-details p {
+  line-height: 1.5;
+  width: 45%;
+  margin-top: 25px;
+}
+.img-aboutUS {
+  position: absolute;
+  top: 45%;
+  right: 8%;
+}
+.img-aboutUS img {
+  height: 40vh;
+}
+
+/* media query ahmed */
+@media (max-width: 1200px) and (min-width: 992px) {
+  .img-aboutUS {
+    right: 5%;
+  }
+}
+@media (max-width: 992px) {
+  .img-aboutUS {
+    position: initial;
+  }
+  .container {
+    display: flex;
+    padding: 0px;
+  }
+  .container-details {
+    width: 50%;
+    padding: 40px 10px 10px 40px;
+  }
+  .container-details p {
+    width: 100%;
+  }
+}
+@media (max-width: 800px) {
+  .about-us-section {
+    height: 100vh;
+  }
+  .container {
+    display: flex;
+    padding: 0px;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
+  }
+  .container-details {
+    width: 100%;
+    padding: 50px 40px;
+  }
+  .img-aboutUS img {
+    width: 100%;
+    height: auto;
+  }
+
+  /* our service */
+  .service__shap2 {
+    font-size: 10px;
+  }
+
+  .service__shap2 {
+    font-size: 10px;
+  }
+
+
 }
